# buddy-system

./: .gitignore
docs/: buddy-bus-protocol.html  buddy-design-system.html  buddy-technical-spec.html
firmware/: .gitignore
firmware/bbp-core/: .clangd  Makefile
firmware/bbp-core/include/: bbp.h
firmware/bbp-core/src/: bbp_crc.c  bbp_internal.h  bbp_rx.c  bbp_tx.c  bbp_util.c
firmware/bbp-core/test/: test_bbp.c
firmware/bbp-policy/: .clangd  Makefile
firmware/bbp-policy/include/: bbp_policy.h
firmware/bbp-policy/src/: bbp_host.c  bbp_info.c  bbp_mod.c
firmware/bbp-policy/test/: test_policy.c
firmware/bbp-schemas/: .clangd  Makefile
firmware/bbp-schemas/include/: bbp_schemas.h
firmware/bbp-schemas/test/: test_schemas.c
firmware/examples/desktop-demo/: .clangd  Makefile  demo.c
firmware/examples/rp2040-host/: CMakeLists.txt  main.c
firmware/examples/rp2040-peripheral/: CMakeLists.txt  main.c
kicad/base/: accessories.kicad_sch  buddy-base-v1.kicad_pcb  buddy-base-v1.kicad_pro  buddy-base-v1.kicad_sch  buddy_audio.kicad_sch  buddy_bus.kicad_sch  mechanical.kicad_sch  untitled.kicad_sch
kicad/brains/daisy-brain/: daisy-brain.kicad_pcb  daisy-brain.kicad_pro  daisy-brain.kicad_sch
kicad/cards/knob-buddy/: knob-buddy.kicad_pcb  knob-buddy.kicad_pro  knob-buddy.kicad_sch  knob_buddy.kicad_sch
kicad/cards/line-buddy/: line-buddy.kicad_pcb
web/: .dockerignore  .env.example  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  nginx.conf  package-lock.json  package.json
web/src/: content.config.ts
web/src/components/: BaseHead.astro  (+4 more)
(+31 files in other folders)
